GCP-ansible/roles/app-deploy/templates/ingress-deloyment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: titatic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-api
          servicePort: 8080
